# Achyutas_Code_Base

ESP32-WIFI_Application/: README.md  main.c  tasks_common.h  wifi_app.c  wifi_app.h
LVGL/Arduino_Framework/: README.md
LVGL/Arduino_Framework/LVGL-Speedometer/: CMakeLists.txt  LVGL-Speedometer.ino  filelist.txt  ui.c  ui.h  ui_MainScreen.c  ui_events.h  ui_font_Display16.c  ui_font_Display20.c  ui_font_Display24.c  ui_font_Display70.c  ui_helpers.c  ui_helpers.h  ui_img_speedbg_png.c  ui_img_speedfg_png.c
LVGL/Arduino_Framework/LVGL_Button_click/: LVGL_Button_click.ino
LVGL/Arduino_Framework/LVGL_Hello_world/: LVGL_Hello_world.ino
LVGL/Arduino_Framework/LVGL_Menu_Rotary/: LVGL_Menu_Rotary.ino
LVGL/Arduino_Framework/LVGL_Meter/: LVGL_Meter.ino
LVGL/Arduino_Framework/LVGL_Rotary_Meter/: LVGL_Rotary_Meter.ino
LVGL/Arduino_Framework/TFT_eSPI settings/: User_Setup.h
TCU/: Telematic Control Unit.pptx
